--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <h6 class="p-3 lg:p-0">Discount: <span id="discount">00 </span>TK</h6>
             <h5 class="p-3 lg:p-0">Total: <span id="grand-total">00 </span>TK</h5>
             <!-- Open the modal using ID.showModal() method -->
-            <button id="openModalButton" class="btn btn primary bg-[#E527B2] text-white w-auto" onclick="my_modal_1.showModal(); applyCoupon()" disabled>Open Modal</button>
+            <button id="openModalButton" class="btn btn primary bg-[#E527B2] text-white w-auto" onclick="my_modal_1.showModal(); applyCoupon()" disabled>Make Purchase</button>
             <dialog id="my_modal_1" class="modal">
               <form method="dialog" class="modal-box">
                 <img class="ml-40	" src="/images/congo.png" alt="congo photo">
